--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
+/src/main/java/com/mobile/mobilebackend/LeetCode.java
 
 ### VS Code ###
 .vscode/
