--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,9 +17,10 @@ spring:
   redis:
     port: 6379
     host: localhost
-    database: 0
+    database: 3
+    timeout: 60000
 server:
-  port: 8080
+  port: 8082
   servlet:
     context-path: /api
 
